# coreNetwork

./: .gitignore  CMakeLists.txt
src/: main.cpp  matrix.hpp  neural-network.hpp  read_mnist.hpp  tui.hpp
